# GD_Weather

./: .gitignore  Dockerfile  README.md  pyproject.toml
docs/: openapi.html  openapi.yaml
src/gd_weather/: __main__.py
src/gd_weather/app/: __init__.py
src/gd_weather/app/api/: config.py  constant.py  log.py  payload.py  route.py  service.py
