[tool.poetry]
name = "GD_Weather"
version = "0.1.0"
description = ""
authors = [
    "zeen <289050736@qq.com>"
]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
aiohttp = "^3.8.1"
pydantic = { extras = ["dotenv"], version = "^1.9.1" }
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
